# CogwareCopilot

./: .gdb_history  .gitignore  Cargo.toml  Gemfile  Makefile  README.md  build.rs  build.sh  kernel8.img  rust-toolchain.toml  rustc-ice-2024-09-11T21_21_21-17192.txt  rustc-ice-2024-09-12T04_53_20-17069.txt  rustc-ice-2024-09-22T19_26_09-23411.txt  rustc-ice-2024-09-22T23_44_06-12196.txt  rustc-ice-2024-09-23T05_25_29-21874.txt  rustc-ice-2024-09-26T22_39_47-17933.txt
.cargo/: config.toml
CogwareCan/: Cargo.toml
CogwareCan/src/: gauge.rs  lib.rs
CogwareCan/tests/: Cargo.toml
bcm2837-hal/: Cargo.toml  README.md
bcm2837-hal/src/: critical_section.rs  delay.rs  interrupt.rs  lib.rs
bcm2837-hal/src/gpio/: __pin.rs  mod.rs
bcm2837-hal/src/macros/: gpio.rs
bcm2837-hal/src/spi/: mod.rs  spi.rs
firmware/: config.txt
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  main.rs  time.rs
kernel/src/drivers/: hyperpixel.rs  mod.rs  sdemmc.rs
sdmmc/: Cargo.toml  rustc-ice-2024-06-27T21_16_06-26593.txt  rustc-ice-2024-06-27T21_16_13-26716.txt  rustc-ice-2024-06-27T21_16_13-26717.txt  rustc-ice-2024-06-27T21_16_51-26815.txt
sdmmc/src/: lib.rs  time.rs
sdmmc/src/filesystem/: files.rs
sdmmc/src/sdcard/: __sdemmc.rs  mod.rs  sdemmc.rs
space_invaders/src/: lib.rs  main.rs  time.rs
space_invaders/src/framebuffer/: color.rs  fb_trait.rs  mod.rs
src/: CogWare.qoi  bg.qoi  cpu.rs  driver.rs  exception.rs  fb_trait.rs  framebuffer.rs  gl.rs  hyperpixel.rs  lib.rs  mailbox.rs  main.rs  memory.rs  panic_wait.rs  synchronization.rs  time.rs  v3d.rs
src/_arch/aarch64/: exception.rs  time.rs
src/_arch/aarch64/cpu/: boot.rs
src/_arch/aarch64/memory/mmu/: translation_table.rs
src/_arch/cortex_a/: cpu.rs  time.rs
src/_arch/cortex_a/cpu/: boot.rs
src/bsp/: raspberrypi.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_interrupt_controller.rs  bcm2xxx_pl011_uart.rs
src/bsp/device_driver/bcm/bcm2xxx_interrupt_controller/: peripheral_ic.rs
src/bsp/raspberrypi/: driver.rs  kernel.ld  memory.rs
src/bsp/raspberrypi/memory/: mmu.rs
src/cpu/: boot.rs
src/egl/: mod.rs
src/glesv2/: mod.rs
src/hvs/: displaylist.rs  mod.rs  plane.rs
src/mailbox/: mod.rs  tag.rs
src/memory/: mmu.rs
src/memory/mmu/: translation_table.rs  types.rs
src/testtriangle/: mod.rs
src/v3d/: buffer.rs  flags.rs  message.rs  mod.rs  registers.rs
