[package]
name = "cogware-kernel"
version = "0.7.0"
authors = ["Andre Richter <andre.o.richter@gmail.com>"]
edition = "2021"

[profile.release]
lto = true

[features]
default = ["bsp_rpi3"]
bsp_rpi3 = ["tock-registers"]
bsp_rpi4 = ["tock-registers"]

[lib]
name = "cogware_kernel"
path = "src/lib.rs"
test = false
bench = false

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]

# Optional dependencies
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }
bcm2837-hal = { path = "bcm2837-hal", features = ["critical-section-impl"] }
embedded-sdmmc = { path = "sdmmc" }
cortex-a = "8.1.1"
noto-sans-mono-bitmap = "0.3.0"
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"
qoi = { version = "0.4.1", default-features = false, features = ["alloc"] }
embedded-hal = "1.0.0"
fugit = "0.3.7"
mcp2515 = "0.2.2"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.7", features = [
  "unproven",
] }
cogware-can = {path = "CogwareCan"}
paste = "1.0.15"
zerocopy = "0.7.35"

# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }
