[package]
name = "bcm2837-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
bcm2837-lpa = { version = "0.4.0", features = ["critical-section"] }
critical-section = "1.1.2"
embedded-hal = "1.0.0"
interrupts = "0.1.5"
log = "0.4.21"
paste = "1.0.15"

[features]
default = ["critical-section-impl"]
critical-section-impl = ["critical-section/restore-state-none"]
