[package]
name = "cogware-copilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"]}
embedded-hal = "1.0.0"
cortex-a = "~8.1"
space_invaders = { path = "../space_invaders", features= ["no_std"] }
bitflags = "2.3"
# log = { version = "0.4.19" }
log = { version = "0.4.19", features = ["max_level_off"] }
bcm2837-hal = { path = "../../bcm2837-hal", features = ["critical-section-impl"] }
embedded-sdmmc = { path = "../sdmmc" }
# bcm2837-lpa = { version = "0.4.0", features = ["critical-section"]}
critical-section = "1.1.2"
embedded-alloc = "0.5.1"

# [profile.release]
# lto = true
# Platform specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }
